# typomata

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/: example_usage.py
src/typomata/: state_machine.py
tests/: test_typomata.py
typomata/: __init__.py  state_machine.py
