[project]
name = "typomata"
version = "0.1.0"
description = "Typomata is a Python state machine library that leverages type hints to define state transitions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["typing_extensions","graphviz"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

